Spacing issue OnG on mobile

--- a/src/app/features/features.component.css
+++ b/src/app/features/features.component.css
@@ -59,7 +59,7 @@ ngb-carousel .picsum-img-wrapper > img {
 
 .top_heading {
   position: absolute;
-  top:25%;
+  top:23.25%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
